increased z-index of navbar to make sure it is rendered above everything else

--- a/static/styles/sass/base.sass
+++ b/static/styles/sass/base.sass
@@ -21,7 +21,7 @@ body, html
   position: sticky
   top: 0
   left: 0
-  z-index: 10
+  z-index: 1001
   width: 100%
   height: 75px
   background: $white
